# docker-images

./: .drone.yml  build.py
cordova-build/: Dockerfile
freqtrade/: Dockerfile
guardian/: Dockerfile  entrypoint.sh
icecast/: Dockerfile
lftp/: Dockerfile
liquidsoap/: Dockerfile
prettier/: Dockerfile
prettier/app/: .prettierrc.js  package.json
rtmp/: Dockerfile
symfony-php-nginx/: Dockerfile  entrypoint.sh
symfony-php-nginx/conf/nginx/: default.nginx  nginx.nginx
symfony-php-nginx/conf/php/: php-fpm.conf
symfony-php-nginx/conf/supervisor/: supervisor.conf
versioning/: Dockerfile  pyproject.toml  versioning.py
versionning/: Dockerfile  versionning.sh
